fix header spacing

--- a/app/assets/stylesheets/parts/header.scss
+++ b/app/assets/stylesheets/parts/header.scss
@@ -5,7 +5,6 @@ header {
 
   @include desktop {
     display: grid;
-    grid-template-columns: 1fr auto minmax(25em, 3fr) 1fr;
   }
 
   @include mobile {
